# pyPublicDecompWT

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  HISTORY.txt  MANIFEST.in  PublicDecompWT.ABOUT  README.md  README.txt  makefile.vc  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml  pip.yml  trigger.yml
COMP/: CMakeLists.txt  makefile.vc
COMP/Inc/: Bitlevel.h  CBlock.h  CBuffer.h  CImage.h  CQualityInfo.h  CQualityMeasures.h  RMAErrorHandling.h  vssver.scc
COMP/JPEG/: CMakeLists.txt
COMP/JPEG/Inc/: CHOptim.h  CHcodec.h  CHufftables.h  CJBlock.h  CJPEGCoder.h  CJPEGDecoder.h  CJPEGLossLessCoder.h  CJPEGLossyCoder.h  CQuantizationTable.h  CompressJPEG.h  JPEGConst.h
COMP/JPEG/Src/: CHOptim.cpp  CHcodec.cpp  CHufftables.cpp  CJBlock.cpp  CJPEGDecoder.cpp  CJPEGLossLessCoder.cpp  CJPEGLossyCoder.cpp  CQuantizationTable.cpp  CompressJPEG.cpp  makefile.vc
COMP/Src/: CBuffer.cpp  CImage.cpp  CQualityMeasures.cpp  makefile.vc
COMP/T4/: CMakeLists.txt
COMP/T4/Inc/: CBitBuffer.h  CompressT4.h  T4Coder.h  T4Codes.h  T4Decoder.h
COMP/T4/Src/: CBitBuffer.cpp  CompressT4.cpp  T4Coder.cpp  T4Codes.cpp  T4Decoder.cpp  makefile.vc
COMP/WT/: CMakeLists.txt
COMP/WT/Inc/: CACCoder.h  CACDecoder.h  CACModel.h  CVLCCodec.h  CVLCCoder.h  CVLCDecoder.h  CWBlock.h  CWTCoder.h  CWTDecoder.h  CompressWT.h  WTConst.h
COMP/WT/Src/: CACCoder.cpp  CACDecoder.cpp  CACModel.cpp  CVLCCoder.cpp  CVLCDecoder.cpp  CWBlock.cpp  CWTCoder.cpp  CWTDecoder.cpp  CompressWT.cpp  makefile.vc
DISE/: CDataField.h  CMakeLists.txt  CSpacecraftID.h  CSpectralChannelID.h  CxRITAnnotation.cpp  CxRITAnnotation.cpp.bak  CxRITAnnotation.h  CxRITFile.cpp  CxRITFile.h  CxRITFileCompressed.h  CxRITFileDecompressed.h  CxRITFileHeaderRecords.cpp  CxRITFileHeaderRecords.h  DISE.dsp  DISE.opt  ErrorHandling.cpp  ErrorHandling.h  GSDS_Volume_F.h  GSDS_Volume_F_NBO.h  MSGTime.h  MSGTime_impl.h  SmartPtr.h  TimeSpan.cpp  TimeSpan.h  Types.h  UTCTime.cpp  UTCTime.h  YYYYMMDDhhmm.h  makefile.vc
cmake/modules/: FindPythonExtensions.cmake  UsePythonExtensions.cmake  targetLinkLibrariesWithDynamicLookup.cmake
conda/: bld.bat  build.sh  meta.yaml
pybind/: CMakeLists.txt  VERSION  libxRITDecompress.cpp
scripts/: xRITDecompress
test-data/compressed_ref/: H-000-MSG4__-MSG4________-HRV______-000012___-202105260000-C_  H-000-MSG4__-MSG4________-HRV______-000012___-202105260600-C_  H-000-MSG4__-MSG4________-HRV______-000012___-202105261200-C_  H-000-MSG4__-MSG4________-HRV______-000012___-202105261800-C_  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260000-C_  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260600-C_  H-000-MSG4__-MSG4________-VIS006___-000004___-202105261200-C_  H-000-MSG4__-MSG4________-VIS006___-000004___-202105261800-C_
test-data/decompressed/: H-000-MSG4__-MSG4________-HRV______-000012___-202105260000-__  H-000-MSG4__-MSG4________-HRV______-000012___-202105260600-__  H-000-MSG4__-MSG4________-HRV______-000012___-202105261200-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260000-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260600-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105261200-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105261800-__
test-data/uncompressed_ref/: H-000-MSG4__-MSG4________-HRV______-000012___-202105260000-__  H-000-MSG4__-MSG4________-HRV______-000012___-202105260600-__  H-000-MSG4__-MSG4________-HRV______-000012___-202105261800-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260000-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105260600-__  H-000-MSG4__-MSG4________-VIS006___-000004___-202105261800-__  H-000-MSG4__-MSG4________-_________-EPI______-202105260000-__  H-000-MSG4__-MSG4________-_________-EPI______-202105260600-__  H-000-MSG4__-MSG4________-_________-EPI______-202105261200-__  H-000-MSG4__-MSG4________-_________-EPI______-202105261800-__  H-000-MSG4__-MSG4________-_________-PRO______-202105260000-__  H-000-MSG4__-MSG4________-_________-PRO______-202105260600-__  H-000-MSG4__-MSG4________-_________-PRO______-202105261200-__  H-000-MSG4__-MSG4________-_________-PRO______-202105261800-__
tests/: test_api.py
xRITDecompress/: .gitignore  CMakeLists.txt  Makefile  libxRITDecompress.cpp  makefile.vc  xRIT.py  xRITDecompress.cpp
